# RPi5

./: .gitattributes  .gitignore  1.PiOSTools.sh  5.postgresAndSampleDataInstall.sh  8.firewallConfig.sh  GrafanaConfigBackup  GrafanaInstall  PostgresqlInstall  PromtailInstall  README  WordpressInstall  _README  cf-ddns.sh  gitBackup  gitBootstrap  gitRestore  grafanaConfigRestore  grafanaDemoInstall  intrusionDetectInstall.py  nginxInstall  pagila-dashboard.json  pagilaDemo.yaml  piosUpdate  refreshDbtDocs.sh
00_os/: BasicPiOSTools.sh  READ.ME  _README  firewallConfig.sh  removeNginxProxy.sh  updatePiOSLite.sh
01_git/: bootstrapGitPi.sh  gitBootstrap.sh  gitignore
03_nodeExporter/: setupNodeExporter.sh
03_postgres/: createWaterAnalyticsDB.sh  setupPythonBronzeEnv.sh
04_dbt/: setupDbt.sh
04_prometheus/: alertLogger.py  alert_webhook.py  node_exporter.json  prometheus.rules.yml  setupNodeExporterDashboard.sh
05_dagster/: initDagsterProject.sh
06_dbt/: dbt_project.yml  (+2 more)
07_dagster/water_quality/: README.md  pyproject.toml  setup.cfg  setup.py
07_dagster/water_quality/.tmp_dagster_home_1k1ihiib/history/: runs.db
07_dagster/water_quality/.tmp_dagster_home_844h0aov/history/: runs.db
07_dagster/water_quality/.tmp_dagster_home_844h0aov/history/runs/: index.db
07_dagster/water_quality/.tmp_dagster_home_avu20_a3/history/: runs.db
07_dagster/water_quality/.tmp_dagster_home_avu20_a3/history/runs/: index.db
07_dagster/water_quality/.tmp_dagster_home_avu20_a3/schedules/: schedules.db
07_dagster/water_quality/water_quality/: definitions.py  wq_pipeline.py
(+323 files in other folders)
